# controllers/TenantDocument.js
@@ -65,7 +65,7 @@ const list = async (req, res) => {
       const record     = await DocumentTypeModel.find(query).lean().sort({ createdAt: -1 })
       let Docs = []
       for (let i = 0; i < record.length; i++) {
-        is_verified = await ThisModel.findOne({document_type_id:record[i]._id,is_verified:true})
+        is_verified = await ThisModel.findOne({tenant_id:req.user._id,document_type_id:record[i]._id,is_verified:true})
         record[i]['is_verified']  = (is_verified)?true:false
         record[i]['verification'] = is_verified
         Docs.push(record[i])
